Add main application logic in app.py to manage user authentication and page redirection. Update Dockerfile to run app.py instead of Home.py, and modify docker-compose.yml to reflect new service structure. Remove session state initialization from Logout.py for cleaner logout functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,9 @@
 version: '3.9'
 services:
-  backend:
-    build: ./backend
-    container_name: backend
-    ports:
-      - "8000:8000"
-    environment:
-      - OPENAI_API_KEY=IDE_IRD_AZ_API_KEYED
-
-  frontend:
-    build: ./frontend
-    container_name: frontend
+  app:
+    build: .
+    container_name: baza-app
     ports:
       - "8501:8501"
-    depends_on:
-      - backend
+    environment:
+      - OPENAI_API_KEY=IDE_IRD_AZ_API_KEYED
