Update Streamlit theme colors and manage logo assets
This commit updates the Streamlit theme by changing the primary color and secondary background color for improved visual appeal. Additionally, a new large logo image is added, while the previous logo is removed, ensuring a cleaner and more cohesive branding experience.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,5 @@ showSidebarNavigation = false
 
 [theme]
 base="light"
-secondaryBackgroundColor="#dfe6f1"
+primaryColor="#d89a3f"
+secondaryBackgroundColor="#ffe3b8"
