--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 streamlit
 requests
 plotly
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+pandas
+sqlalchemy
+psycopg2-binary
+python-dotenv
+werkzeug
+alembic
