Rename project references from ÉpítAI to Pontum across backend and frontend files, updating documentation, scripts, and model descriptions to reflect the new project name.

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -11,7 +11,7 @@ STREAMLIT_SERVER_ADDRESS=localhost
 STREAMLIT_BROWSER_GATHER_USAGE_STATS=False
 
 # Application Settings
-APP_TITLE=ÉpítAI Construction Management
+APP_TITLE=Pontum Construction Management
 APP_ICON=🏗️
 APP_LAYOUT=wide
 
